# CS202_Mario_Group1

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CMakeLists.txt  CMakePresets.json  DEVELOPER_SETUP.md  DOCUMENTATION_INDEX.md  Mario.cpp  PlayState_Test.cpp  QUICK_REFERENCE.md  README.md  SUMMARY.md  TEAM_CHECKLIST.md  TODO_ITEMS.md  camera_plans.md
assets/: test_map.csv
libraries/include/SFML/: System.hpp
libraries/include/mbedtls/: mbedtls_config.h  threading_alt.h
libraries/lib/: FLAC.lib  FLACd.lib  freetype.lib  freetyped.lib  libssh2.lib  mbedcrypto.lib  mbedcryptod.lib  mbedtls.lib  mbedtlsd.lib  mbedx509.lib  mbedx509d.lib  ogg.lib  oggd.lib  sfml-audio-d.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s.lib  sfml-window.lib  vorbis.lib  vorbisd.lib  vorbisenc.lib  vorbisencd.lib  vorbisfile.lib  vorbisfiled.lib
libraries/lib/cmake/FLAC/: targets.cmake
libraries/lib/cmake/MbedTLS/: MbedTLSConfigVersion.cmake  MbedTLSTargets-debug.cmake  MbedTLSTargets-release.cmake  MbedTLSTargets.cmake
libraries/lib/cmake/Ogg/: OggTargets.cmake
libraries/lib/cmake/SFML/: SFMLAudioDependencies.cmake  SFMLAudioSharedTargets.cmake  SFMLAudioStaticTargets.cmake  SFMLConfig.cmake  SFMLGraphicsDependencies.cmake  SFMLGraphicsSharedTargets.cmake  SFMLGraphicsStaticTargets-debug.cmake  SFMLGraphicsStaticTargets-release.cmake  SFMLGraphicsStaticTargets.cmake  SFMLMainSharedTargets.cmake  SFMLMainStaticTargets.cmake  SFMLNetworkDependencies.cmake  SFMLNetworkSharedTargets.cmake  SFMLNetworkStaticTargets.cmake  SFMLSystemSharedTargets.cmake  SFMLSystemStaticTargets.cmake  (+3 more)
libraries/lib/pkgconfig/: harfbuzz.pc  libssh2.pc  mbedcrypto.pc  mbedtls.pc  mbedx509.pc
src/: main.cpp
src/core/: Game.cpp  Game.h  GameState.h  StateManager.cpp  StateManager.h
src/entities/: .gitkeep  EnemyManager.cpp  EnemyManager.h  ItemManager.cpp  ItemManager.h  MapManager.cpp  MapManager.h  PlayerManager.cpp  PlayerManager.h
src/entities/camera/: CameraManager.cpp  CameraManager.h
src/entities/player/: Mario.cpp  Mario.h  PlayerManager.cpp  PlayerManager.h
src/interfaces/: ICameraManager.h  IEnemyManager.h  IHUDManager.h  IItemManager.h  IMapManager.h  IPlayerManager.h  ISaveManager.h
src/states/: GameOverState.cpp  GameOverState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h
src/ui/: .gitkeep  HUDManager.cpp  HUDManager.h  SaveManager.cpp  SaveManager.h
src/world/: .gitkeep  GameWorld.cpp  GameWorld.h
(+11 files in other folders)
